...
                animation: 'slide_from_right',
              }}
            >
              <Stack.Screen name="index" options={{ headerShown: false }} />
              <Stack.Screen
                name="login"
                options={{ title: 'Connexion', headerShown: false, animation: 'fade' }}
              />
              <Stack.Screen name="(tabs)" options={{ headerShown: false }} />
              <Stack.Screen name="(patient)" options={{ headerShown: false }} />
              <Stack.Screen
                name="messages/index"
                options={{ title: 'Messages', headerBackTitle: 'Retour' }}
...
